reformatting for blog posts!

--- a/_posts/2018-02-13-welcome.md
+++ b/_posts/2018-02-13-welcome.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Welcome!
-subtitle: Congrats! You've found my website
+subtitle: Congrats! You've found my website.
 tags: [general]
 ---
 
