--- a/MeetUpSlides.Rmd
+++ b/MeetUpSlides.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "My Summer @ Rstudio & an intro to the scales pkg"
-author: "Dana Seidel"
+#author: "Dana Seidel"
+#date: 09/19/2018
 output:
   rmdshower::shower_presentation:
     self_contained: false
@@ -20,6 +21,7 @@ knitr::opts_chunk$set(
 
 library(scales)
 library(tidyverse)
+set.seed(4235)
 ```
 
 
