--- a/MeetUpSlides.Rmd
+++ b/MeetUpSlides.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "My Summer @ Rstudio & an intro to the scales pkg"
-#author: "Dana Seidel"
-#date: 09/19/2018
+author: "Dana Seidel"
+date: "09/19/2018"
 output:
   rmdshower::shower_presentation:
     self_contained: false
