--- a/rstudioconf2020.Rmd
+++ b/rstudioconf2020.Rmd
@@ -61,14 +61,14 @@ library(scales)
 library(ggplot2)
 library(xaringanthemer)
 library(dplyr)
-library(lubridate) 
+library(lubridate)
 
 mono_light(
   base_color = "#1C5253",
   header_font_google = google_font("Josefin Sans"),
-  text_font_google   = google_font("Montserrat", "300", "300i"),
-  code_font_google   = google_font("Droid Mono"), 
-  code_inline_color = "#DF5286", 
+  text_font_google = google_font("Montserrat", "300", "300i"),
+  code_font_google = google_font("Droid Mono"),
+  code_inline_color = "#DF5286",
   link_color = "#d60f8d"
 )
 options(htmltools.dir.version = FALSE)
@@ -92,42 +92,16 @@ class: center, middle
 
 # Transformations
 
-scales provides a number of common transformation functions (`*_trans()`) which specify functions to preform data transformations, format labels, and set correct breaks.
+scales provides a number of common transformation functions (`*_trans`) which specify functions to preform data transformations, format labels, and set correct breaks.
 
 <br/>
 
 For example: <br/>
-`log_trans()`, `sqrt_trans()`, `reverse_trans()` power the `scale_*_log10()`,
-`scale_*_sqrt()`, `scale_*_reverse()` functions in ggplot2. 
+`log_trans`, `sqrt_trans`, `reverse_trans` power the `scale_*_log10`,
+`scale_*_sqrt`, `scale_*_reverse` functions in ggplot2. 
 
-
----
-class: center, middle
-
-```{r}
-ggplot(diamonds) +
-  geom_point(aes(y = price, x = carat))
-```
-
-
----
-class: center, middle
-
-```{r}
-ggplot(diamonds) +
-  geom_point(aes(y = price, x = carat)) + 
-  scale_x_continuous(trans = log_trans()) +
-  scale_y_log10()
-```
----
-class: center, middle
-
-```{r}
-ggplot(diamonds) +
-  geom_hex(aes(y = price, x = carat)) + 
-  scale_x_log10() +
-  scale_y_log10()
-```
+<br/>
+`scale_*_datetime`, `scale_*_date` are powered by the `time_trans` and `date_trans` functions. 
 
 ---
 class: left, middle
@@ -136,7 +110,6 @@ class: left, middle
 - `asn_trans()` : Arc-sin square root transformation.
 - `atanh_trans()` : Arc-tangent transformation.
 - `boxcox_trans()` `modulus_trans()` : Box-Cox & modulus transformations.
-- `date_trans()` `time_trans()` `hms_trans()` : transformations for date, datetime, and hms classes
 - `exp_trans()` : Exponential transformation (inverse of log transformation).
 - `pseudolog_trans()` : Pseudo-log transformation
 - `probabilty_trans()`: Probability transformation
@@ -152,12 +125,25 @@ transformation functions for repeated use.
 # use trans_new to build a new transformation
 dollar_log <- trans_new(
   name = "dollar_log",
-  trans = log_trans(base = 10)$trans, # extract a single element from another trans
-  inverse = function(x) 10^(x), # or write your own custom functions
+  # extract a single element from another trans
+  trans = log10_trans()$trans, 
+  # or write your own custom functions
+  inverse = function(x) 10^(x), 
   breaks = breaks_log(),
   format = label_dollar()
-  )
+)
 ```
+
+---
+class: center, middle
+
+```{r}
+ggplot(diamonds, aes(y = price, x = carat)) + 
+  geom_hex() +
+  scale_y_continuous(trans = dollar_log) +
+  scale_x_log10()
+```
+
 
 ---
 class: center, middle
@@ -187,7 +173,7 @@ class: center, middle
 
 ```{r squish}
 squish(c(-1, 0.5, 1, 2, NA), range = c(0, 1))
-scales::discard(c(-1, 0.5, 1, 2, NA), range = c(0, 1))
+discard(c(-1, 0.5, 1, 2, NA), range = c(0, 1))
 censor(c(-1, 0.5, 1, 2, NA), range = c(0, 1))
 ```
 
@@ -196,7 +182,8 @@ class: center, middle
 
 #### Squish can be really useful for setting the `oob` argument for a color scale with reduced limits.
 ```{r}
-ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, colour = Sepal.Length)) +
+ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width,
+  colour = Sepal.Length)) +
   geom_point() + 
   scale_color_continuous(limit = c(6, 8), oob = scales::squish)
 ```
@@ -204,7 +191,7 @@ ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, colour = Sepal.Length)) +
 ---
 class: center, middle, inverse 
 
-# Sensible Breaks for continuous scales
+# Sensible breaks for continuous scales
 
 ---
 class: left, middle
@@ -245,7 +232,7 @@ class: left, middle
 - `label_ordinal`: add ordinal suffixes (-st, -nd, -rd, -th) to numbers according to languages (e.g. English, Spanish, French).
 - `label_bytes`, `label_number_si` 
 - `label_parse`, `label_math`, `label_pvalue`
--` label_wrap`
+- `label_wrap`
 
 For a full list and descriptions, see: [scales.r-lib.org/reference](scales.r-lib.org/reference)
 
@@ -255,7 +242,7 @@ class: center, middle
 Like break functions, the output of all `label_*` functions is a function. All these output functions are designed to take a numeric vector (traditionally, of breaks) and return a nicely-formatted character vector.
 <br/>
 
-This makes it easy to use them directly as the input to a ggplot2 scale_* labels argument to automatically take the plots calculated breaks and label them with consistent style. 
+This makes it easy to use them directly as the input to a ggplot2 scale_* labels argument to automatically take the plot's calculated breaks and label them with consistent style. 
 
 ```{r,fig.height = 1}
 demo_continuous(txhousing$median, labels = label_dollar())
@@ -265,28 +252,35 @@ class: middle, center
 
 ## Changing defaults
 
-Many of the `label_*` functions are built off of the generic `label_number` function, and allow users to easily customize label formats using consistent arguments. 
+Many of the `label_*` functions are built off of the generic `label_number` function, and allow users to customize label formats with consistent args. 
 
 Users can specify a different rounding behavior (`accuracy`), or change the `big_mark` or `decimal_mark` for international styling; even add a `prefix` or a `suffix` or `scale` your numbers on the fly. 
 
 ```{r}
-french_percent <- label_percent(decimal.mark = ",", suffix = " %", accuracy = .1)
+french_percent <- label_percent( 
+  decimal.mark = ",",
+  suffix = " %", # add some space maybe?
+  accuracy = .1)
 french_percent(runif(3))
 
-usd_to_euro <- label_dollar(prefix = "", suffix = "\u20ac", scale = .86)
+usd_to_euro <- label_dollar(
+  prefix = "", suffix = "\u20ac", scale = .91)
 usd_to_euro(100)
 ```
 
 ---
 class: left, middle
 
-```{r}
-# delightfully,s already implemented in args: date_breaks, date_labels
-filter(txhousing, city == "Houston") %>% 
-ggplot() +
+```{r, fig.height = 3}
+filter(txhousing, city == "Houston") %>%
+  ggplot() +
   geom_line(aes(y = sales, x = date_decimal(date))) +
-  scale_x_datetime("Month-Year", breaks = breaks_width("2 year"), 
-                   labels = label_date("%b %Y"))
+  scale_x_datetime("Month-Year",
+    breaks = breaks_width("2 year"),
+    labels = label_date("%b %Y")
+ # delightfully, this functionality is already implemented x
+ #  in scale_*_date args: date_breaks, date_labels
+  )
 ```
 
 
@@ -301,8 +295,8 @@ class: center, middle
 # Color palettes `r emo::ji("art")`
 
 scales provides a number of color palette functions that passed the number of colors you want or a range of gradient values, will return vector of colors by hex code. 
+
 ```{r, palettes}
-# pull a list of colors from any palette
 viridis_pal()(4)
 brewer_pal(type = "div", direction = -1)(4)
 div_gradient_pal()(seq(0, 1, length.out = 4))
@@ -347,7 +341,7 @@ scale_shape_ordinal()
 scale_color_manual()
 scale_shape_manual()
 scale_size_manual()
-# use the values as they are from your data frame with 
+# use the values as they are from your data frame with
 scale_color_identity()
 scale_shape_identity()
 scale_size_identity()
@@ -364,8 +358,8 @@ class: center, middle
 
 ```{r}
 palette(viridis_pal()(4))
-plot(Sepal.Length ~ Sepal.Width, 
-     col = Species, pch=20, data = iris)
+plot(Sepal.Length ~ Sepal.Width,
+  col = Species, pch = 20, data = iris)
 ```
 
 ---
